# ChangeLog for dev-perl/Lab-Measurement
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Lab-Measurement/ChangeLog,v 1.7 2012/06/24 12:59:00 tove Exp $

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

*Lab-Measurement-2.96 (01 May 2012)

  01 May 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  Lab-Measurement-2.94.ebuild, +Lab-Measurement-2.96.ebuild:
  Version bump

  01 Mar 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Add missing cpan remote-id tags in metadata.xml (#406287)

  19 Feb 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  Lab-Measurement-9999.ebuild:
  Add missing dependencies Encode, TeX::Encode

  30 Jan 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  Lab-Measurement-2.94.ebuild, Lab-Measurement-9999.ebuild:
  Make this unified live/non-live ebuild actually work...

  30 Jan 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  Lab-Measurement-2.94.ebuild, Lab-Measurement-9999.ebuild:
  Remove duplicate setting of KEYWORDS

*Lab-Measurement-9999 (29 Jan 2012)
*Lab-Measurement-2.94 (29 Jan 2012)

  29 Jan 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  +Lab-Measurement-2.94.ebuild, +Lab-Measurement-9999.ebuild, +metadata.xml:
  New package