@@ -1,7 +1,27 @@
-DIST Lab-Measurement-2.94.tar.gz 125394 SHA256 179ade2764af5e896d74d2218162a431c7d541f5732334b28bf52f2e9f6b567f SHA512 397f3f3aa61b562787691fd386a749f194a55f0364c12c8523bafe200bf50263eec7117be019614495a0c2dab8875c4624c365ea9faaf86347dafecad9d5bdba WHIRLPOOL 6549185e33b2525838f0604c94939e88d913815c74991a758e9d10f302fba53ec3f908b96be5d51999891990ce583f854b20630c5e27420f6906eb7bea908255
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 DIST Lab-Measurement-2.96.tar.gz 130920 SHA256 bb36888bba4f20c22d108d0d42803f6b6197a523198c824ad3279fc5e05c52ae SHA512 5f8293546f29f59dfb87b05d187d815fbba0d45ae9ff95ee30a646e676f917265e80c6681a3abd877f144f67b0565215b33b74080aa2655e562c37eae8ab1175 WHIRLPOOL 85eb1738860c6bc554ab250de78dced01cfbbff276778813d6963cd281326be960a838bbad784be3b5ff10d1f25e3fed253df5b7f6b45b57a6a9e5d2115dc020
-EBUILD Lab-Measurement-2.94.ebuild 1419 SHA256 b8fc07810f65376e5762ed4877cbc51f2fb7b73e1d5252e507910b02813e2137 SHA512 7f9f4b15164ffab23f6fa7d48a0e96d68964fe79a9d8f63219313a6382643a6cea34e1dbd5ed0e0eecbdc3c6882e3b645a3a597a3e4901c35156897a79dd05af WHIRLPOOL 0774946eed83ce3d7de84c7ebc054cf7ad8d582954ce64fbf83aa436f1f1ccb41031777588acd08bf147497237680f0a1681e4293af62d386507c28abca87437
+DIST Lab-Measurement-3.00.tar.gz 134759 SHA256 676c15430eff6ea893505146d9b1d3af51ef0dc8fff9a28f49aaabb9a2e8e7d1 SHA512 0dfba6aa6737be6631fd1082eded2773344833a94da430a2694f152efb13f3561226f8065d629699a20ecd7754dbe3f1d5d4794cab5b78bbb60dd6de3cb6cc29 WHIRLPOOL 1bbbcde56b5290aaa8b6dc9783112ae36c3c2da1866cd37ba8757aa4247054447ca25da1cbda2cec940286ac840d54daf8ff97d5c0cbfbdbe473ad0d6ed4f493
 EBUILD Lab-Measurement-2.96.ebuild 1445 SHA256 0358393271257b8692ab1520bd415f020879d5f221365f593e6c6a3bdf9d228a SHA512 f798a8adbb1a3529e7bfea7ee2442f73d20b4a0c994044d56e3eca517b06443b940d1938c7e505a09d1958964016b6c436a7e4587429564a99437e33b91427e5 WHIRLPOOL d248c16b8660c70432987acd6efdc4ea91bed56f5a5cd232401a2772d18f004a23fbae4e32b5d37875a381230229e3735193e8aca534180c4670b80e8d4daca0
-EBUILD Lab-Measurement-9999.ebuild 1419 SHA256 211a9804f5ef685cf9a971baeb096aa6c4165f5582ab7b7a78fe18c679fa5d87 SHA512 ba99a19bff4032f6a1dcf361d9ad2ac8a9bd0ba6ce0a488bfc0301114a451249f0f0b10feaa83c2fd453d6b0d875a74f60566f3be5cbfa69c96cce9a5b7f144c WHIRLPOOL ef109fa925d31db4b5ea23296524f64879b340722bfcc3962004b7fdebe5283eb2e1625372803be48e28b5db2a3ad67e326c6a900aec5ac21a193e88b8fddb8a
-MISC ChangeLog 1294 SHA256 bc775853eb806b1e09c2c898f069571d643090231ca3b4c0ca708332ee65d19f SHA512 004533567f09bff0453650a0ac6e9b8874874a14da864de8b4e1bd91961436cceb5055a67752f925d625b88119b8c20669df976d49ed80c71117e93ba04eb7f7 WHIRLPOOL bf0ba6fef5fddfb62b6d94121cd9d026965daed7eff199ef900ffad6e9c1a725c23db550fa4f0c89ea9e4c153ab5ee5048e3a878d6cab62b594bd5c19f040317
+EBUILD Lab-Measurement-3.00.ebuild 1466 SHA256 2b6566821c39257bb3d6f8ffaa9483f1478a934c9b10b31730b4fd98cb980396 SHA512 47a9dbe271772821790e832d039f998526ac84007aa8a27816ff3a5028f1913592514452ffc73f715a1d1d1f8b245a0fa49b715022c8e3b504538e5d4fedef1c WHIRLPOOL c842ccd331b4a655cfca1411cc1f06727c472f13fdb9a3030f4796fa3c161f041cd23c3753af2533b4aab5263f02f24b2fa5ec30321356eb3f8a9eb455355535
+EBUILD Lab-Measurement-9999.ebuild 1466 SHA256 e1055b92a62d7ef078945f594ee51c7f1afc51a8a2c823e9b78611423ff0f569 SHA512 e81242af0941bff26ac4781e742493bfaa5dc9d5f3ec9e804c0c698b014592a907fda13a74c771ac4298265738d980bb039c799ed17ec1df244213df7ca6df5b WHIRLPOOL e7567ce879c3dffa64e63c4792fda6cc0bb253964574da5fd04c6e9282f5bf7ee7c2e12870334ee13f79f500f9349671ddc269b4158ab28d3a46662114387cca
+MISC ChangeLog 1502 SHA256 142344557fccc273caf85194ec183819bea07a56935d4049e7df36a43c60e8c9 SHA512 1a17990bf40d8281012be0be491cab39aa8c0ddbe1315c460daafa65c9fde6c52890cbc3d25494c32dd5045b37d8557b2d2cfb3bac707ddc17f7d0db590fe998 WHIRLPOOL abc506e453705e6d40e2bf86bda14d75f5555fadb07e54c479956ad03a6b89890cf313b9646d02dd72b4dba00a8af7e8dbc4bf74894b34af79c72666bb0a587c
 MISC metadata.xml 2999 SHA256 01b33840aa52ba67573440ed2b001d68b1446ff815da2731596c2a057f3127bc SHA512 13129b3bb668d9274e21fc005e2b75aba823b4df903c41b544f242559460406831436fee27b201247d079ab1bc36096e928520c898aeb04fe51dc9c0e85a7bf2 WHIRLPOOL a6c3369e8727d5784f07fe35c10750dd40ab3854b643c3918092b99a3493e9c912bdfe7b36c0326cb787d498d778c5766bb3925ad814aa7232bd4b2dba29f92b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQIcBAEBCgAGBQJP/wKsAAoJEEb+UGWnxTyHFLMP/3vWs6SmZQE/xXV2aD4UAq0m
+uS8P9BcvUxjkWSKW8KSBuZ4yQryM39sR/pW9s6E/EZ7fDdGz+UjN8mdp+FJ1wAff
+qFMHEMItxxQPaFWJ5eiU/v2QRdxdr1rKFt3OEYX6mbXvbXakb8DzweCWPf5F3Whw
+gnHTP2xHsfDJrYk5yDuYC4SqP6wfOqPmBGeUWu31dJF6+B65IH8V83NnQrJqe+g+
+Ew3h1I7odCOWWlLrQAql3lZjY4x2PEvCn+m32XZ1gz3qku/CRxQ1fqlorxTOkj49
+Z/ls1uxBauyikjkrKRPKa4RK5Tx/9+6lA7henUsbUcSpoDzSvSjrSgiH3CVj8NO6
++LUhwAe1HeImucdceVRcHJfbkqJ92ml3O1v/s6qMqmIBbMzy7oEr3rz1HlK8lRsv
+QkH1bn6cE1wJEA73LGyewqYIDiBGi8Zt76EaA9/TyE9vVi423us7OUxRm0w1dpsh
+ODb+mZjBaBFUblqH0MWnMZw2RSroImjRbBOGd9372xIuMt51PldlU6zrUOYH1N+z
+89DAMdtHPbb6dQa8/6fzpfItjXqfRPPMgrYDORN8P0QcjOb0M0Ru8O4NMDj8aBCF
+hrQZ02pORTTIrK0lIr5ncDc27GwlKPtEY0p5Xf8sc0xMjWAnJ1z7+zceq3BAzQLN
+2Y8YJRyuB/sgE+PEBI52
+=SPqA
+-----END PGP SIGNATURE-----
