@@ -1,8 +1,8 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX pidgin-2.10.0-gold.patch 1003 SHA256 26657c717f4e624b0b3af8746b61b0861ba4da65e55e49a753cfefaba72c60cb SHA512 9c54d1da082362325aa5ec0f25356e629adb7f639a0ea98a8aff726e4769cb21bf3350772aa219b7ad021630d13113de02c42317551edfe5f044ae40ac0df984 WHIRLPOOL 77fdb2855ac8fe3dc163a42d18df1847f849d9fc42cb09565746e70e72f9e2f74f3d33f44c6bc6f8277047d6d05bb9f12507a8f8c16e1c672c201a75c8fa7c8b
-DIST pidgin-2.10.4.tar.bz2 9970850 SHA256 8fbef835c8dfa2281532ad7064d664477d72015d6dcd4345362dcfe658aaee0e
+DIST pidgin-2.10.4.tar.bz2 9970850 SHA256 8fbef835c8dfa2281532ad7064d664477d72015d6dcd4345362dcfe658aaee0e SHA512 8399a1f8f48aabcd598fa03b80680d230bec26ee7cf616373ddfbf174e214d60ecfc37f82130258bca6cca0717ac2d3deb843e7e95907b75fef5b7433d9674be WHIRLPOOL f257a9e387360ba66d66d51d4d7b13dd74fd4f68f694c098e3b17d5dc46807e89511187ca7d61c3232453b24bf1e1151afcb974c9299cad18c126cbaa7410940
 DIST pidgin-2.10.6.tar.bz2 10007092 SHA256 3e25a633b97cbfa8326999a30282e7a662a9b9bbf2853be84af0b8fb60392c96 SHA512 fffc8721ebe5dbaa53c213ec07a6ad5045ba336829cf9bce11aef8b5968f0f0b49289cfe1818e183a3807b6b8b7ebb75387a81d7135835859e0188a05f3be1ef WHIRLPOOL 7d044ad2cad68e223c3c20d867b4ebf23956982b9ecbc1f91264857abea2555b6ae07b963671eaa49fd2b85d648b6f5692c561e0cc060fb0762458880b5e9145
 EBUILD pidgin-2.10.4.ebuild 7046 SHA256 f4fbd5d894cd3f1f7f8f126519d1d0e2c56b14c65d5fd42d50357347119d5099 SHA512 960754e9e23749bed1676a7a237328e1145068f5081c15a2ffb8dca59f2856c18a40e0498de07552cd73b5d0bc86583d7343665e31e42b895c0ba5f7a3d804ce WHIRLPOOL 4d88e2305f9c652bc647fcb09a8f6fb6fc2430a86a4c36d0db047189e95b4f4e007eb141f95d999f6e7208884d9fb7b605979710e7cde7228026b376661fb7eb
 EBUILD pidgin-2.10.6.ebuild 7060 SHA256 aa41bd5f16a10f5a8c14bb742ea16b0c8cec6ef642c905f478a3eb84223d017a SHA512 9547862e00cbf6d9e739b11f684e539c87092387db7e7a708f7d3c282db53a989115f0e93cfb1224b9e480ddc462bc498a095a7dc0dfb6cb4c1a0ae62c0e4c98 WHIRLPOOL 64fcc14532bc7243bbf89a9427f76fba7ceb7351f7f076110fddc6595b0ff3af3a85eb33ac9545288e8e9abe39bb09b09536ec853e99cec9a74d2cab8afbcced
@@ -11,17 +11,11 @@ MISC metadata.xml 1311 SHA256 a0253264c64bdd1a4623db7f223cae50450dc8577d74748c25
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCgAGBQJP+uRRAAoJEPiazRVxLXTFFaoQALBot1yAa8uWYnPpcDHP9rUR
-abgjXBGld91wZ7O3yxGn231YI+YCNejrcgRUGP8aDwCtaLDGHhqF2SyPMVvtNi7d
-y2+Xwf09ArH7turpzlCeGLEQicjiMiCzesn781GH33ve1PsbYacoPQFrk/JkXOYm
-jtZqOTE3nqd3lnVnUWkYVhJnLXL1uMKbscDsjFXkTBBGdqEmnN8TO577M996+pRS
-+ONN9KjEJxMmJkTLTFEnyBG0iqEXw/Uj6Zhjx6KycFmjfsSMKMUQM2spAvh6dE+N
-QiqFA8NUumh/KfLXZzwbwru41l+T9Ta1an4njz4AuTOsyNnTTXeKEBQu1KHzNrIo
-/gHr8abG0VX2mM6pkJpvknyGuL37d7TkpFmV0ZO/zPdLInxJacGwclUDWC9h7hKT
-y5PWzngcyDhvqEN0CtaLG0Zq3iP5SIacxVYW/t/PKVR16paEyZ5huM3wQUplSXk/
-9thdau/WQaB0em4NkCBbT0BSSDBhOY6b4LnsQzoPtprZCH1/L5E55VfTcLrGUjDi
-oKVJbP+3Yjs3otKGw9/hCndgLIzNzrBeRq1eQ84qnHWU/0gFX6E+S+4dpODyvjhM
-NTG2VNWGid2UUlNEB4uqp95FnQHkt40fhOX28yMJyrVFptYT2R/UfPNFFNWQ2nHA
-tsW4A8888Ez4RZ6Wwke0
-=riIZ
+iQEcBAEBCAAGBQJQADETAAoJEO+t9ga+3I3avjEIAINjqvjO+I1qbDZV5tARf+Xg
+MJ9aUJbxykN9KxxiS8o4booz7DTl8f4UAQADbLkDlqZjv44k0r29fjp+tR27B8Ad
+ywtzOa5fsS54ACz3fITQRG+HPXno3RIgyVV9UQUseUnfEYFpaGFx/6bijBPbQTGv
+NgG63xVsbxAgAHx2EyltWPEgRQRoF1LU9tPi49Us51upDLULirRL9QqyCz5WCcRy
+fpj61oIpBkm2Jh9rvGHD3g7CkOaF4jL4uRwjvqo96IgsM8JZeNwF/yBEK5+X9R5F
+ewL53/b9yYwUhGYPUCsgh1zkxMLO9jKmaec/c8tTX8aoN5xn1ch3T2wD0/pFIC4=
+=M0s9
 -----END PGP SIGNATURE-----
