@@ -1,18 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-DIST sendxmpp-0.0.6.tar.gz 5648 RMD160 67750504aefa326e05eec0dc94166dde3a373fa9 SHA1 3eb834f47f4ecefd17ca15d726d6f9f1a60d850c SHA256 0466e8fb6381ab57ed3dc79425a1f9245da54e23552bcfac618e772a80938410
-DIST sendxmpp-0.0.8.tar.gz 6401 RMD160 e93fc2e8b6c1844c179773c55c8665ee95b668e0 SHA1 c3c087cfc50a0e4a23222d0ea57a0219f0ebda34 SHA256 10e0a8d03f504f93ee4b9178c86f1882ac718e76d427602b1f9e10653cde0dde
-DIST sendxmpp_1.20.orig.tar.gz 8846 RMD160 fe7382d55cc5f5b3d6de220f086c1eb7adc9d268 SHA1 dba86ba976e83baab608b28d8260e5692c8bfb13 SHA256 94363f69587a4f2818a7f82ab973f5319f23c4b91e94afe1ff9ab151f2463dc4
-EBUILD sendxmpp-0.0.6.ebuild 762 RMD160 9567c3b382226e787d9850cebb952351a602a322 SHA1 9c6f4fd954d7d104f8e0bd078334034b388ed762 SHA256 10a23750b39602fa625d3d297abbaf49c91268ca6217b3af53854676b26203cc
-EBUILD sendxmpp-0.0.8.ebuild 798 RMD160 061c0098eeaaaf2ae19949fbd627252a4205f104 SHA1 68616f5f7a3c0710ba70e88adef3c6ad7a4783c3 SHA256 4249dff14cf04e0b7932c344f513f0b5547a234db3e839d6979eb76ffe72d225
-EBUILD sendxmpp-1.20.ebuild 609 RMD160 2fc26daedf125bb0b86a137cda7f2d70fcde6c8e SHA1 2bbfbfbc84ca335e83267200a4df150bcb3eabc6 SHA256 988a6d9e580847b6e205871dfebb7b8e9ffd798612ca60628fccf39f958d142f
-MISC ChangeLog 1929 RMD160 81367c0871f8a9f94d35911cbea76b7a7144010d SHA1 f8c7e41484e2dd3259c0314e6c08bdb6f5bf0df3 SHA256 e5c76d202596b1767b12873dc3990f555c3eb15a7bc9fff6d61105fc9c1b3301
-MISC metadata.xml 221 RMD160 66ce46212072ed26cd420705213e39bebcc80954 SHA1 b403c7855e20288b79c87b2c4cd97a04adcd984d SHA256 286ecd08afaf8af48c50edb9673984bb4411d61d44169d73ef643e5a700ef698
+DIST sendxmpp-0.0.6.tar.gz 5648 SHA256 0466e8fb6381ab57ed3dc79425a1f9245da54e23552bcfac618e772a80938410
+DIST sendxmpp-0.0.8.tar.gz 6401 SHA256 10e0a8d03f504f93ee4b9178c86f1882ac718e76d427602b1f9e10653cde0dde
+DIST sendxmpp_1.20.orig.tar.gz 8846 SHA256 94363f69587a4f2818a7f82ab973f5319f23c4b91e94afe1ff9ab151f2463dc4
+EBUILD sendxmpp-0.0.6.ebuild 762 SHA256 10a23750b39602fa625d3d297abbaf49c91268ca6217b3af53854676b26203cc SHA512 8d9aaa99d6075712beef2ca55cc58a98b0c0b835652bb68d86d044809f603e599e25b0b5732821874ae2be4d91995f32932e5ed962ca160f4be4fd00bb4cdd14 WHIRLPOOL c417a240380c3b4100e072317c9b2394a9cd0cb3b8ffb956d8e9a1c823f0716166119548dd410042b41017a704a4c6b0c31c261893c2752223233ee95d889b97
+EBUILD sendxmpp-0.0.8.ebuild 798 SHA256 4249dff14cf04e0b7932c344f513f0b5547a234db3e839d6979eb76ffe72d225 SHA512 b88c01b84464cc1fe832d69f57f96132b0a4d2b40a7ed5be6067bfdf39064b29eabad99204f36df61ea3044ce9afa16704d9224283dceadd12f6131c4cc5cc3b WHIRLPOOL 4e8266b6f8861126f64f661952813316abebf0a091e33f2598bf63508531ec11af39f1b7ce2464f95144ee851b1db88dc7175d8d8a4e8770f37e30cae4e0a2af
+EBUILD sendxmpp-1.20.ebuild 609 SHA256 988a6d9e580847b6e205871dfebb7b8e9ffd798612ca60628fccf39f958d142f SHA512 01c68a246621fc43d4979cc4ab2721a6a351a46bcf6aac09c787bcef43dd8572cd3673f6946aa39b47f6573d1a0938820072c5a8efb57c85e0f4ec97a8910825 WHIRLPOOL 57746103c08abe04d981b7ebe1e343ed727de4103d7017d4d4cd1dffbbb70449425d2716c7ba408c5bac8a3eb2016a0891e72b244c5e5e2645a97e2fae4ed90b
+MISC ChangeLog 1929 SHA256 e5c76d202596b1767b12873dc3990f555c3eb15a7bc9fff6d61105fc9c1b3301 SHA512 586198d81c9ee9bd893afccd324c08fe13781c6f72da2fd3639c7472d9f00fa7ceaa33e7c69450e6650a527154a598729430d07862f8be3e488e4e0d1845cd15 WHIRLPOOL b8219d209dbac2b839aa96551b190eafedbbc17c88066bce148e6c4b901d9230a8aa706ab97fa8f89772261582871f36d5dbb3cc906a96f9b7521d740e95cf1b
+MISC metadata.xml 221 SHA256 286ecd08afaf8af48c50edb9673984bb4411d61d44169d73ef643e5a700ef698 SHA512 648789b1369ae4b9766f7acdb8b1dcf259bba94e4946fd6b57babf879c1135322772e79ed2d283c0792df103633ad4bdd18fb162a28407465d289e6ab24d32d0 WHIRLPOOL 564b9556a552e11ab9653d84192179a5da6ecae3f9cb805ceb3a0b74c315cb5637ee9c206ea6279f1f4a214c8bb371dfb271c1993af149d8c74e5f4653e38954
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEARECAAYFAkx2T/4ACgkQV3J2n04EauyoagCfWT1gfUszF2Xh8+z6EixvFlm3
-euAAoJPosml/aBY3TckXfJ4BxI0uR6H7
-=QyAv
+iQEcBAEBCAAGBQJQADEUAAoJEO+t9ga+3I3aWWEH+QHdtdMxn2hb8Z7YB+qt/z0X
+P/h72+c0DEKwsgAVIYRXEQD7EnfiIpF8UhQSKbHxf9rqM62SE7ZArGtubW5QqKvR
+l4K3jpZ02jtKtTppcA1FEdnYoKaUbCfsom6p33WUq8dEzdz6u4xAsKzRlQ496n3v
+BuWg5VUreb+KTGci3nLDVPTagUzbJePcCW+Bc4KLq4Ixhp6+/pWbSUM3Zar4kD7a
+B/wWa7Z5p1HGgC6mUhAH3AWw3zOZNEZfKUOmHOnungvz8mkzlyqe9tPdOiV+uVAV
+3JIP04R5waxN+g4iQaVu5e9re4qosCpFmx4907AKdQvJVh4TeZs1xLRSvchgh1s=
+=CCxP
 -----END PGP SIGNATURE-----
