@@ -1,6 +1,13 @@
 # ChangeLog for dev-perl/Lab-Measurement
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Lab-Measurement/ChangeLog,v 1.7 2012/06/24 12:59:00 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Lab-Measurement/ChangeLog,v 1.8 2012/07/12 16:59:05 dilfridge Exp $
+
+*Lab-Measurement-3.00 (12 Jul 2012)
+
+  12 Jul 2012; Andreas K. Huettel <dilfridge@gentoo.org>
+  -Lab-Measurement-2.94.ebuild, +Lab-Measurement-3.00.ebuild,
+  Lab-Measurement-9999.ebuild:
+  Version bump
 
   24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
   Update CPAN upstream info
